# VoiceWebserver

./: README.md  SenseVoice.bat  install.bat  pyproject.toml
app/: config.py  webservice.py
app/asr_models/: sensevoice_engine.py
app/factory/: asr_model_factory.py
